# cvxpy-portfolio-optimizer

./: .cruft.json  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: publish.yml  test.yml
examples/: backtesting.ipynb  bounding_weights.ipynb  efficient_frontier.ipynb  example.ipynb  multi_objective.ipynb  tracking_error.ipynb
src/cvxpy_portfolio_optimizer/: __init__.py  _enums.py  _models.py  backtester.py  constraint_function.py  effiticent_frontier.py  objective_function.py  portfolio.py  portfolio_optimization_problem.py
tests/: __init__.py  conftest.py  test_backtester.py  test_efficient_frontier.py  test_import.py  test_optimization.py
tests/test_data/: prices.csv
